@@ -1,3 +1,6 @@
+- Oct 11, 2023
+        * Adding external programs to visualize images
+
 - Oct 6, 2023
         * Handling the plotting of selected rows
 
